# fastai-fun

./: .gitignore  Makefile  README.md  pyproject.toml
bag_classifier/: app.py  luxury_bag_model.pkl
