[tool.poetry]
name = "fastai_fun"
version = "0.1.0"
description = ""
authors = ["Dennis Sell <sell.dennis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastai = "^2.7.9"
gradio = "^3.1.7"
scikit-image = "^0.19.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
